[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/pixel_platformer_player/idle/1.png" type="Texture" id=1]
[ext_resource path="res://Assets/pixel_platformer_player/run/5.png" type="Texture" id=2]
[ext_resource path="res://Assets/pixel_platformer_player/run/6.png" type="Texture" id=3]
[ext_resource path="res://Assets/pixel_platformer_player/run/1.png" type="Texture" id=4]
[ext_resource path="res://Assets/pixel_platformer_player/run/2.png" type="Texture" id=5]
[ext_resource path="res://Assets/pixel_platformer_player/run/7.png" type="Texture" id=6]
[ext_resource path="res://Assets/pixel_platformer_player/run/3.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Player2.gd" type="Script" id=8]
[ext_resource path="res://Assets/vignette.png" type="Texture" id=9]
[ext_resource path="res://Assets/Pixelate.gdshader" type="Shader" id=10]
[ext_resource path="res://Scripts/PinBubble.gd" type="Script" id=11]
[ext_resource path="res://Assets/Pin/5.png" type="Texture" id=12]
[ext_resource path="res://Assets/Pin/3.png" type="Texture" id=13]
[ext_resource path="res://Assets/Pin/1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Pin/2.png" type="Texture" id=15]
[ext_resource path="res://Assets/Pin/4.png" type="Texture" id=16]
[ext_resource path="res://Scripts/Player2Rect.gd" type="Script" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.97887, 14.902 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "Run",
"speed": 7.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 12.4204

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 10 )
shader_param/pixel_size = 2

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 1

[sub_resource type="StreamTexture" id=6]

[sub_resource type="CanvasItemMaterial" id=7]
light_mode = 1

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0251386, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CanvasItemMaterial" id=9]
light_mode = 1

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Player2" type="KinematicBody2D"]
scale = Vector2( 1, 0.9 )
collision_layer = 128
script = ExtResource( 8 )

[node name="MainCollission" type="CollisionShape2D" parent="."]
position = Vector2( -0.556808, -15.368 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1.41061, -28.5989 )
scale = Vector2( 0.674746, 0.674746 )
frames = SubResource( 2 )
animation = "Idle"
playing = true
flip_h = true

[node name="InterractArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="InterractArea"]
position = Vector2( 0, -15.757 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Pixelate" type="ColorRect" parent="Camera2D"]
visible = false
material = SubResource( 4 )
margin_left = -513.0
margin_top = -306.0
margin_right = 515.0
margin_bottom = 305.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthIndicator" type="TextureRect" parent="Camera2D"]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 5 )
margin_left = -510.0
margin_top = -298.0
margin_right = 511.0
margin_bottom = 308.0
rect_pivot_offset = Vector2( -221.661, 38.8454 )
texture = SubResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vignette" type="Sprite" parent="Camera2D/HealthIndicator"]
light_mask = 16384
material = SubResource( 7 )
position = Vector2( 513.153, 299.752 )
scale = Vector2( 0.536419, 0.554857 )
texture = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 8 )

[node name="PinBubble" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 5, 5, 5, 1 )
material = SubResource( 9 )
position = Vector2( 0, -35.1683 )
scale = Vector2( 0.5, 0.5 )
z_index = 4096
frames = SubResource( 10 )
script = ExtResource( 11 )
range_max = 600

[node name="PinBubbleNPC" type="AnimatedSprite" parent="."]
visible = false
modulate = Color( 5, 5, 5, 1 )
material = SubResource( 9 )
position = Vector2( 0, -35.1683 )
scale = Vector2( 0.5, 0.5 )
z_index = 4096
frames = SubResource( 10 )
script = ExtResource( 11 )
range_max = 600

[node name="Player2Rect" type="ColorRect" parent="."]
margin_left = -257.0
margin_top = -170.0
margin_right = 258.0
margin_bottom = 168.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}
